gccida/c0/simplify_gen_binary
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_binary/src/simplify-rtx.c:589:27: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_gen_binary( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_binary/src/simplify-rtx.c:589:42: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_gen_binary( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_binary/src/simplify-rtx.c:599:31: error: use of undeclared identifier 'QTextBlock'
if ( rtx_class[code] == 99 && QTextBlock::operator<( op0, op1) ) 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_binary/src/obj/simplify-rtx.o] Error 1
